--- a/style.css
+++ b/style.css
@@ -4,110 +4,123 @@
   box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
 }
-
 .container {
-  width: 100vw;
-  display: flex;
-  height: auto;
-  justify-content: center;
-}
-.container .title {
-  position: absolute;
-  top: 0.5rem;
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #ffffff;
-}
-.container .img-hero {
-  top: 4rem;
-  width: 550px;
-  height: 285px;
-  background-image: url(img/kobo.svg);
+  max-width: 100vw;
+  background-image: url(img/wave.svg);
   background-repeat: no-repeat;
-  background-position: top;
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 1s;
 }
 
-.container .search-container {
-  width: auto;
-  position: absolute;
-  top: 19rem;
+.night-mode {
+  transition: all 1s;
+  background-color: #495057;
+  background-image: url(img/wave-night.svg);
+}
+
+.container .herosection {
+  width: 800px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.container .search-container input {
-  width: 600px;
-  height: 50px;
-  padding: 0 0 0 1rem;
-  font-size: 1.5rem;
-  border: solid 2px rgba(0, 0, 0, 0.5);
+.container .herosection img {
+  width: 80%;
 }
-.container .search-container button {
-  width: 100px;
-  height: 50px;
-  font-size: 1.5rem;
-  font-weight: 700;
+.container .herosection .search-container {
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .herosection .search-container input {
+  width: 80%;
+  height: 40px;
+  font-size: 1rem;
+  padding: 0.5rem;
+  outline: none;
+  border: solid 2px #acacac;
+}
+.container .herosection .search-container input:focus {
+  outline: none;
+  border: solid 2px #4cc9f0;
+}
+.container .herosection .search-container button {
+  width: 10%;
+  height: 40px;
+  font-size: 1rem;
   background-color: #00b4d8;
-  color: #ffffff;
-  border: none;
-  border: solid 2px rgba(0, 0, 0, 0.5);
-  transition: 0.3s;
+  color: #fff;
+  border: solid 2px #acacac;
+  transition: all 0.3s;
 }
-.container .search-container button:hover {
+.container .herosection .search-container button:hover {
   cursor: pointer;
-  outline: solid 2px #4cc9f0;
-}
-.container .search-container input:focus {
-  outline: solid 2px #4cc9f0;
+  background-color: #4cc9f0;
+  border: none;
+  transform: scale(105%);
 }
 .container .card-container {
-  width: 100vw;
-  position: absolute;
-  bottom: 0;
+  margin: 2rem;
+  width: 100%;
+  height: 350px;
   display: flex;
   justify-content: space-around;
-  margin-bottom: 1rem;
 }
 .container .card-container .card {
-  border-radius: 15px;
   width: 300px;
-  height: 250px;
+  height: 100%;
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  color: #23272b;
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
-  align-items: center;
-  background-color: #e9ecef;
-  color: #343a40;
-  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
 }
-.container .card-container .card .icons {
-  width: 80px;
-  height: 80px;
+.container .card-container .card .weather-container {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  top: 1rem;
-  border-radius: 50%;
   display: flex;
-  background-color: #fff;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.container .card-container .card .icons img {
+
+.container .card-container .card .weather-container .icons {
   width: 100px;
   height: 100px;
+  border: solid 2px rgba(35, 39, 43, 0.5);
+  background-color: #fff6f6f6;
+  border-radius: 50%;
 }
-.container .card-container .card .back-color {
-  margin-top: -3rem;
-  border-radius: 15px 15px 0 0;
-  width: 300px;
-  height: 75px;
-  background-color: #4cc9f0;
+
+.container .card-container .card .weather-container .icons img {
+  width: 100%;
+  height: 100%;
 }
-.container .card-container .card .info {
+
+.container .card-container .card .weather-container .info {
+  height: 200px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.container .card-container .card .weather-container .info h2 {
+  font-size: 2rem;
+}
+.container .card-container .card .weather-container .info h4 {
+  font-size: 1.3rem;
+}
+.container .card-container .card .weather-container .info h1 {
+  font-size: 2.2rem;
 }
 .loader-container {
+  transition: 0.3s;
   position: fixed;
   top: 0;
   left: 0;
@@ -122,24 +135,28 @@
 }
 
 .loader-container img {
-  width: 35rem;
+  width: 25rem;
 }
 
 .loader-container.fade-out {
   top: 110%;
   opacity: 0;
 }
+.night {
+  color: #adb5bd;
+}
 @media (max-width: 576px) {
-  .container .title {
-    font-size: 1rem;
+  .container .herosection {
+    width: 450px;
   }
-  .container .img-hero {
-    top: 2rem;
+  .container .herosection img {
+    width: 100%;
   }
-  .container .search-container {
-    top: 17rem;
+  .container .herosection .search-container {
+    padding: 0 2rem;
+    width: 400px;
   }
-  .container .search-container input {
-    width: 250px;
+  .container .herosection .search-container button {
+    width: 20%;
   }
 }
