--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
+  overflow: hidden;
 }
 .container {
   max-width: 100vw;
@@ -19,6 +20,7 @@
   transition: all 1s;
   background-color: #495057;
   background-image: url(img/wave-night.svg);
+  background-repeat: no-repeat;
 }
 
 .container .herosection {
