--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
-  overflow: hidden;
+overflow-x:hidden;
 }
 .container {
-  max-width: 100vw;
+  width: 100vw;
   background-image: url(img/wave.svg);
   background-repeat: no-repeat;
   display: flex;
@@ -37,6 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+overflow: hidden;
 }
 .container .herosection .search-container input {
   width: 80%;
@@ -81,6 +82,7 @@
   color: #23272b;
   display: flex;
   flex-direction: column;
+
 }
 .container .card-container .card .weather-container {
   width: 100%;
@@ -98,6 +100,7 @@
   border: solid 2px rgba(35, 39, 43, 0.5);
   background-color: #fff6f6f6;
   border-radius: 50%;
+overflow: hidden;
 }
 
 .container .card-container .card .weather-container .icons img {
